Added table population
Table now populates flags according to decade of coup

--- a/builds/d3/index.html
+++ b/builds/d3/index.html
@@ -19,6 +19,24 @@
           </tr>
         </thead>
         <tbody>
+		<tr class = "tr-1960">
+			<th>1960s</th>
+		</tr>
+		<tr class = "tr-1970">
+			<th>1970s</th>
+		</tr>
+			<tr class = "tr-1980">
+			<th>1980s</th>
+		</tr>
+			<tr class = "tr-1990">
+			<th>1990s</th>
+		</tr>
+			<tr class = "tr-2000">
+			<th>2000s</th>
+		</tr>
+			<tr class = "tr-2010">
+			<th>2010s</th>
+		</tr>
         </tbody>
       </table>
 
