Added basic graph functionality
Next to do: add in data info + selection for graph

--- a/builds/d3/index.html
+++ b/builds/d3/index.html
@@ -82,5 +82,11 @@
 		margin-right: -50%;
 		transform: translate(-50%, -50%)
 	}
+	
+	.line {
+		fill: none;
+		stroke: #0040ff;
+		stroke-width: 3;
+	}
 	</style>
 </html>
