--- a/builds/d3/index.html
+++ b/builds/d3/index.html
@@ -71,6 +71,20 @@
 		stroke: #0040ff;
 		stroke-width: 3;
 	}
+	
+	.datatip {	
+    position: absolute;			
+	z-index: 99;
+    text-align: center;			
+    width: auto;					
+    height: auto;					
+    padding: 5px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;
+}
 	</style>
 	
 	<body>
@@ -158,7 +172,7 @@
 			<b>Successful coup? </b><p class="infoBar-child outcome"></p>
 		</div>
 		<div>
-			<b>Adverse Regime Change? </b<p class="arc"></p>
+			<b>Adverse Regime Change? </b><p class="infoBar-child arc"></p>
 		</div>
 		<button class="dataButton">Explore data</button>
 		</div>
